# Caustic-Design

./: .gitignore
Caustic_Design/: CMakeLists.txt  dialog.ui  interpolation.h  primitives.h  rt2.h  types.h
Target_Surface/: CMakeLists.txt  SurfaceMesh.cpp  SurfaceModel.cpp  SurfaceModel.h  costFunctor.h  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rendering.cpp  targetoptimization.cpp
caustic_design_cli/: CMakeLists.txt
caustic_design_cli/apps/: caustic_design.cpp
caustic_design_cli/src/common/: bvh.cpp  bvh.h
caustic_design_cli/src/normal_integration/: costFunctor.h  mesh.cpp  mesh.h  normal_integration.cpp  normal_integration.h
caustic_design_cli/src/optimal_transport/: assign.cpp  config.h  convex_polygon.h  domain.h  init.cpp  interpolation.cpp  interpolation.h  optimal_transport.cpp  optimal_transport.h  pgm.h  scene.h
python/: drawPointset.py
